--- a/CoCKeeperHelper/CoCKeeperHelper.csproj
+++ b/CoCKeeperHelper/CoCKeeperHelper.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <Folder Include="Data\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
