--- a/CoCKeeperHelper/CoCKeeperHelper.csproj
+++ b/CoCKeeperHelper/CoCKeeperHelper.csproj
@@ -5,13 +5,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Content Include="bin\Debug\images\blank.jpg" />
+    <Content Include="bin\Debug\images\char.jpg" />
+    <Content Include="bin\Debug\images\node.jpg" />
+    <Content Include="bin\Debug\images\Path.jpg" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
+    <PackageReference Include="Microsoft.jQuery.Unobtrusive.Ajax" Version="3.2.6" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.1" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Data\" />
-    <Folder Include="wwwroot\images\" />
+    <Folder Include="bin\Debug\images\" />
   </ItemGroup>
 
 </Project>
