--- a/CoCKeeperHelper/Properties/launchSettings.json
+++ b/CoCKeeperHelper/Properties/launchSettings.json
@@ -1,10 +1,10 @@
-﻿{
+{
   "iisSettings": {
-    "windowsAuthentication": false, 
-    "anonymousAuthentication": true, 
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
     "iisExpress": {
       "applicationUrl": "http://localhost:3326",
-      "sslPort": 44329
+      "sslPort": 0
     }
   },
   "profiles": {
@@ -18,10 +18,10 @@
     "CoCKeeperHelper": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5661;http://localhost:5666",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:5661;http://localhost:5666"
     }
   }
 }
