Add the start of the chase sequence by adding MOV values and then modify based of the skill roll.

--- a/CoCKeeperHelper/CoCKeeperHelper.csproj
+++ b/CoCKeeperHelper/CoCKeeperHelper.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <Folder Include="Data\" />
+    <Folder Include="Views\ModifySpeed\" />
     <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
